"fixed alignment on nav"

--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -53,14 +53,14 @@
       & > li::after {
         content: "";
         position: absolute;
-        left: 0;
+        left: 50%;
         bottom: -2px;
         width: 130%;
         height: 2px;
         background-color: abstracts.$color-green;
         opacity: 0;
         transition: opacity 1s ease;
-        transform: translateX(-15%);
+        transform: translateX(-50%);
       }
 
       & > li:hover::after {
